--- a/src/Game.css
+++ b/src/Game.css
@@ -1,3 +1,9 @@
 .Game {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  justify-content: center;
   text-align: center;
+  width: 100%;
 }
