--- a/src/Game.css
+++ b/src/Game.css
@@ -2,8 +2,11 @@
   align-items: center;
   display: flex;
   flex-direction: column;
-  height: 100%;
-  justify-content: center;
+  height: 100vh;
   text-align: center;
-  width: 100%;
+  width: 100vw;
+}
+
+main {
+  display: flex;
 }
