Create modal that gets user's choice of marker

--- a/src/Square.css
+++ b/src/Square.css
@@ -1,5 +1,5 @@
 .Square {
-  background-color: mediumpurple;
+  background-color: rgb(139, 82, 139);
   height: 100%;
   margin-left: 5px;
   margin-right: 5px;
